# CppAsync

./: CMakeLists.txt  README.md  TODO
CppAsync/: AsioWrappers.h  Awaitable.h  AwaitableBase.h  CMakeLists.txt  Combinators.h  CommonAwaitable.h  Config.h  Coroutine.h  CoroutineSequence.h  Log.h  Scheduler.h  StackfulAsync.h  StackfulCoroutine.h  StacklessAsync.h  StacklessCoroutine.h  Task.h
CppAsync/Boost/: Asio.h  AsioHandler.h  AsioTraits.h
CppAsync/asio/: Asio.h  AsioTraits.h  PromiseHandler.h
CppAsync/experimental/: CoroutineTraits.h  ImplicitGenerator.h  ImplicitTask.h  TaskCoroutineTraits.h
CppAsync/impl/: Assert.h  AwaitableOps.h  Common.h  CommonAwaitable.h  StackfulAsyncImpl.h  StackfulCoroutineImpl.h  StacklessAsyncImpl.h  StacklessCoroutineImpl.h  TaskImpl.h
CppAsync/util/: AllocElementPtr.h  Arena.h  Cast.h  Closure.h  ContextRef.h  Either.h  EitherData.h  Function.h  FunctionTraits.h  Instance.h  Meta.h  Misc.h  Mixin.h  MoveOnCopy.h  Optional.h  OptionalData.h  PreAlloc.h  Range.h  ScopeGuard.h  SmartPtr.h  StashFunction.h  StaticStack.h  StringUtil.h  TypeTraits.h  UnsafeEitherData.h  VirtualObject.h
Examples/: CMakeLists.txt  Common.h  ex_abortableCountdown.cpp  ex_abortableCountdown_s.cpp  ex_chatClient.cpp  ex_chatClient_s.cpp  ex_chatServer.cpp  ex_chatServer.h  ex_chatServer_s.cpp  ex_countdown.cpp  ex_countdown_n4402.cpp  ex_countdown_s.cpp  ex_customAwaitable.cpp  ex_customAwaitable.h  ex_customAwaitable_s.cpp  ex_fibo.cpp  ex_fibo_n4402.cpp  ex_fibo_s.cpp  ex_flickr.cpp  ex_flickr_s.cpp  ex_futureAsTask.cpp  ex_futureAsTask.h  ex_futureAsTask_s.cpp  ex_http.cpp  ex_http_s.cpp  main.cpp  stdafx.cpp  stdafx.h
Examples/util/: AsioHttp.cpp  AsioHttp.h  Chrono.h  Flickr.cpp  Flickr.h  Function.h  IO.cpp  IO.h  Looper.h  Thread.h
ExamplesNoExceptions/: CMakeLists.txt  Common.h  ex_countdown.cpp  ex_fibo.cpp  main.cpp  stdafx.h
cmake_modules/: enable_max_warning_level.cmake  precompiled_header.cmake
